src/test/ui/borrowck/borrowck-migrate-to-nll.edition.stderr
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
warning[E0502]: cannot borrow `*block.current` as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-migrate-to-nll.rs:28:21
=======
error[E0502]: cannot borrow `*block.current` as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-migrate-to-nll.rs:29:21
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
   |
LL |     let x = &mut block;
   |             ---------- mutable borrow occurs here
LL |     let p: &'a u8 = &*block.current;
   |                     ^^^^^^^^^^^^^^^ immutable borrow occurs here
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
LL |     // (use `x` and `p` so enabling NLL doesn't assign overly short lifetimes)
LL |     drop(x);
   |          - mutable borrow later used here
   |
   = warning: this error has been downgraded to a warning for backwards compatibility with previous releases
   = warning: this represents potential undefined behavior in your code and this warning will become a hard error in the future
   = note: for more information, try `rustc --explain E0729`
=======
...
LL |     drop(x);
   |          - mutable borrow later used here
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0502`.
